src/app/pages/definition-page/definition-page.component.css
.translate-x-positive{
  transform: translateX(40%) scale(90%);;
}
.translate-x-negative{
  transform: translateX(-40%) scale(90%);;
}

.overlay {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
  height: 90%;
  background-color: rgba(217, 216, 216, 0.5);
  z-index: 2;
  border-radius: 16px;
}

